--- a/src/sandpit/sandpit.html
+++ b/src/sandpit/sandpit.html
@@ -1,10 +1,8 @@
 <html>
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
 </head>
 <body>
-<div>
-
-</div>
+<div>Hello</div>
 </body>
 </html>
